apps/vcluster-ora/overlays/ops/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: vcluster-ingress
  namespace: vcluster-ora
spec:
  ingressClassName: nginx 
  rules:
  - host: "ora.k.cluster.sciops.net"
    http:
      paths:
      - backend:
          service:
            name: vcluster
            port: 
              number: 443
        path: /
        pathType: ImplementationSpecific
